--- a/src/ooga/resources/skins/spaceretro/mainmenu.css
+++ b/src/ooga/resources/skins/spaceretro/mainmenu.css
@@ -1,12 +1,14 @@
 /*
-    Document   : lightmode
+    This is a required file for using the SpaceRetro Theme
+    Document: SpaceRetro Theme Main Menu
+    Required path: skins/spaceretro/mainmenu.css
 */
 
 .root{
     -fx-font-size: 12pt;
-    -fx-font-family: "Stencil";
+    -fx-font-family: "Arial Black";
     -fx-base: #BBA1BB;
-    -fx-background-image: url("dukefans.gif");
+    -fx-background-image: url("drivingcar.gif");
     -fx-background-size: stretch;
     -fx-focus-color: #FFFFFF;
 }
@@ -17,6 +19,7 @@
 
 .titleborder{
     -fx-base: #000000;
+    -fx-font-family: "Harlow Solid Italic";
     -fx-padding: 20;
 }
 
@@ -33,18 +36,17 @@
     -fx-spacing: 10;
     -fx-fill: #FFFFFF;
     -fx-font-family: "Arial Black";
-    -fx-fill: #FFFFFF;
 }
 
 .options{
     -fx-spacing: 10;
+    -fx-font-family: "Arial Black";
 }
 
 .button{
-    -fx-background-color: linear-gradient(#C9C9C9 , #DFDFDF );
-
+    -fx-background-color: linear-gradient(#E4E4E4, #D5D5D5);
 }
 
 .button:hover {
-    -fx-background-color: linear-gradient(#000FFF , #D8DBFF  );
+    -fx-background-color: linear-gradient(#E084E0, #EFE1EF);
 }
