--- a/src/ooga/resources/skins/duke/gametable.css
+++ b/src/ooga/resources/skins/duke/gametable.css
@@ -23,6 +23,12 @@
     -fx-alignment: "center";
 }
 
+.dashboard{
+    -fx-spacing: 20;
+    -fx-padding: 5;
+    -fx-font-family: "Arial Black";
+}
+
 .cardskin{
     -fx-image: url(duked.png);
 }
