--- a/src/ooga/resources/skins/spaceretro/gametable.css
+++ b/src/ooga/resources/skins/spaceretro/gametable.css
@@ -23,6 +23,13 @@
     -fx-alignment: "center";
 }
 
+.dashboard{
+    -fx-spacing: 20;
+    -fx-padding: 5;
+    -fx-font-family: "Arial Black";
+    -fx-font-size: 10pt;
+}
+
 .cardskin{
     -fx-image: url(starry.png);
 }
