--- a/src/ooga/resources/skins/spaceretro/gametable.css
+++ b/src/ooga/resources/skins/spaceretro/gametable.css
@@ -28,6 +28,12 @@
     -fx-padding: 5;
     -fx-font-family: "Arial Black";
     -fx-font-size: 10pt;
+    -fx-alignment: "center";
+}
+
+.score{
+    -fx-fill: #FFFFFF;
+    -fx-font-size: 10pt;
 }
 
 .cardskin{
