Specified list cell values

--- a/src/ooga/resources/skins/cs308/mainmenu.css
+++ b/src/ooga/resources/skins/cs308/mainmenu.css
@@ -50,3 +50,8 @@
 .button:hover {
     -fx-background-color: linear-gradient(#0D334A, #040C23);
 }
+
+.list-cell{
+    -fx-text-fill: #FFFFFF;
+    -fx-text-background-color: #FFFFFF;
+}
