--- a/src/ooga/resources/skins/landscapes/mainmenu.css
+++ b/src/ooga/resources/skins/landscapes/mainmenu.css
@@ -49,3 +49,8 @@
 .button:hover {
     -fx-background-color: linear-gradient(#2b2c30 , #75553e  );
 }
+
+.list-cell{
+    -fx-text-fill: #FFFFFF;
+    -fx-text-background-color: #FFFFFF;
+}
