added list cell hover

--- a/src/ooga/resources/skins/duke/mainmenu.css
+++ b/src/ooga/resources/skins/duke/mainmenu.css
@@ -54,3 +54,7 @@
     -fx-text-fill: #FFFFFF;
     -fx-text-background-color: #FFFFFF;
 }
+
+.list-cell:hover{
+    -fx-background-color: #FFFFFF;
+}
