--- a/src/ooga/resources/skins/landscapes/mainmenu.css
+++ b/src/ooga/resources/skins/landscapes/mainmenu.css
@@ -52,5 +52,9 @@
 
 .list-cell{
     -fx-text-fill: #FFFFFF;
+    -fx-background-color: #FFFFFF;
+}
+
+.list-cell:hover{
     -fx-text-background-color: #FFFFFF;
 }
