--- a/src/ooga/resources/skins/duke/mainmenu.css
+++ b/src/ooga/resources/skins/duke/mainmenu.css
@@ -52,9 +52,11 @@
 
 .list-cell{
     -fx-text-fill: #FFFFFF;
-    -fx-text-background-color: #FFFFFF;
+    -fx-text-background-color: #000000;
+    -fx-background-color: #000000;
 }
 
 .list-cell:hover{
-    -fx-background-color: #FFFFFF;
+    -fx-text-background-color: #000FFF;
+    -fx-background-color: #000FFF;
 }
