--- a/src/ooga/resources/skins/spaceretro/mainmenu.css
+++ b/src/ooga/resources/skins/spaceretro/mainmenu.css
@@ -53,9 +53,11 @@
 
 .list-cell{
     -fx-text-fill: #FFFFFF;
-    -fx-background-color: #FFFFFF;
+    -fx-text-background-color: #000000;
+    -fx-background-color: #000000;
 }
 
 .list-cell:hover{
-    -fx-text-background-color: #FFFFFF;
+    -fx-text-background-color: #E084E0;
+    -fx-background-color: #000FFF;
 }
