--- a/src/ooga/resources/skins/duke/mainmenu.css
+++ b/src/ooga/resources/skins/duke/mainmenu.css
@@ -57,6 +57,6 @@
 }
 
 .list-cell:hover{
-    -fx-text-background-color: #000FFF;
+    -fx-text-background-color: #D8DBFF;
     -fx-background-color: #000FFF;
 }
