--- a/src/ooga/resources/skins/landscapes/mainmenu.css
+++ b/src/ooga/resources/skins/landscapes/mainmenu.css
@@ -58,5 +58,5 @@
 
 .list-cell:hover{
     -fx-text-background-color: #C9C9C9;
-    -fx-background-color: #000FFF;
+    -fx-background-color:  #75553e;
 }
