--- a/src/ooga/resources/skins/spaceretro/gametable.css
+++ b/src/ooga/resources/skins/spaceretro/gametable.css
@@ -45,5 +45,5 @@
 }
 
 .button:hover {
-    -fx-background-color: linear-gradient(#E084E0, #EFE1EF);
+    -fx-background-color: linear-gradient(#9000C4, #E084E0);
 }
