--- a/src/ooga/resources/skins/spaceretro/mainmenu.css
+++ b/src/ooga/resources/skins/spaceretro/mainmenu.css
@@ -48,7 +48,7 @@
 }
 
 .button:hover {
-    -fx-background-color: linear-gradient(#E084E0, #EFE1EF);
+    -fx-background-color: linear-gradient(#006e82, #0098b3);
 }
 
 .list-cell{
@@ -58,6 +58,6 @@
 }
 
 .list-cell:hover{
-    -fx-text-background-color: #EFE1EF;
-    -fx-background-color: #E084E0;
+    -fx-text-background-color: #613754;
+    -fx-background-color: #613754;
 }
