--- a/src/ooga/resources/skins/duke/gametable.css
+++ b/src/ooga/resources/skins/duke/gametable.css
@@ -50,7 +50,7 @@
 }
 
 .message{
-    -fx-text-fill: red;
+    -fx-text-fill: white;
     -fx-padding: 10px;
     -fx-font-family: "Arial Black";
 }
