--- a/src/ooga/resources/skins/bday/mainmenu.css
+++ b/src/ooga/resources/skins/bday/mainmenu.css
@@ -4,7 +4,7 @@
     Required path: skins/duke/mainmenu.css
 */
 
-.root{
+.menu{
     -fx-font-size: 2.1em;
     -fx-font-family: Jokerman;
     -fx-background-image: url("minions.gif");
@@ -59,4 +59,39 @@
 .list-cell:hover{
     -fx-text-background-color: #C9C9C9;
     -fx-background-color: #0D334A;
+}
+
+.gametable{
+    -fx-font-size: 12pt;
+    -fx-font-family: Jokerman;
+    -fx-base: #BBA1BB;
+    -fx-background-image: url("mememanbg.jpg");
+    -fx-background-size: stretch;
+    -fx-focus-color: #FFFFFF;
+}
+
+.title{
+    -fx-fill: #FFFFFF;
+    -fx-alignment: "center";
+}
+
+.header{
+    -fx-padding: 10;
+    -fx-alignment: "center";
+}
+
+.dashboard{
+    -fx-spacing: 20;
+    -fx-padding: 5;
+    -fx-font-size: 10pt;
+    -fx-alignment: "center";
+}
+
+.score{
+    -fx-fill: #FFFFFF;
+    -fx-font-size: 10pt;
+}
+
+.cardskin{
+    -fx-image: url(mememan.jpg);
 }
