--- a/src/ooga/resources/skins/duke/mainmenu.css
+++ b/src/ooga/resources/skins/duke/mainmenu.css
@@ -18,12 +18,12 @@
 
 .titleborder{
     -fx-base: #000000;
-    -fx-padding: 20;
+    -fx-padding: 10;
 }
 
 .title{
     -fx-fill: #FFFFFF;
-    -fx-font-size: 30pt;
+    -fx-font-size: 25pt;
     -fx-alignment: "center";
 }
 
@@ -43,7 +43,7 @@
 
 .button{
     -fx-background-color: linear-gradient(#C9C9C9 , #DFDFDF );
-
+    -fx-padding: 5
 }
 
 .button:hover {
